--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/projectuser
-spring.datasource.username=saum
+spring.datasource.url=jdbc:postgresql://localhost:5432/user
+spring.datasource.username=user-role
 spring.datasource.password=
 jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
