--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.4</version>
+		</dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
