--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8083
 spring.datasource.url=jdbc:postgresql://localhost:5432/user
 spring.datasource.username=user-role
 spring.datasource.password=
